# executorch_smoothly

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  simple_conv.py  xnnpack_simpleconv.pte
